# template_fastapi

./: .imdoneignore  README.md
.imdone/: config.yml
docs/: pyproject.toml
src/client/: angular.json  package-lock.json  package.json
src/server/: .flake8  README.md  pyproject.toml
src/server/src/: main.py
src/server/src/shared/: logger.py  settings.py  telegram.py
src/server/src/utils/: logger.py  settings.py  telegram.py
src/setup/: README.md  main.py  pyproject.toml
src/setup/src/: __init__.py  _shared.py  cmd_in_dir.py  create_folder_abs.py  create_folder_rel.py  env.py  git_sync.py  https_certificate.py  main.py  ng.py  ng_build.py  ng_dist.py  pgadmin.py  poetry.py  port_redirect.py  postgresql.py  postgresql_add_db.py  postgresql_install.py  python.py  samba.py  simple_command.py  systemd.py  tauri_build.py  timescaledb_install.py  timescaledb_update_db.py
src/webapp/: angular.json  package-lock.json  package.json
src/webapp/src/: styles.css
src/webapp/src/app/: app.module.ts
