[tool.poetry]
authors = ["Konstantin-Dudersky <Konstantin.Dudersky@gmail.com>"]
description = ""
name = "docs"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = { version = "^22.6.0", allow-prereleases = true }
konstantin-docs = "*"
poethepoet = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poe.tasks]
docs = { script = "konstantin_docs.main:generate_images('docs/dia_src', 'docs/dia_dist')" }

[tool.pyright]
include = ["src"]
pythonPlatform = "Linux"
pythonVersion = "3.10"
stubPath = '.typings'
typeCheckingMode = "strict"
